--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application1</string>
     <string name="title_activity_additem">Additem</string>
+    <string name="title_activity_food_repository">FoodRepository</string>
 </resources>
