--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Application1</string>
     <string name="title_activity_additem">Additem</string>
     <string name="title_activity_food_repository">FoodRepository</string>
+    <string name="title_activity_funscreen">Funscreen</string>
 </resources>
